[package]
edition = "2021"
name = "mudcrab"
version = "0.1.0"

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
config = "0.11.0"
error-chain = "0.12.4"
reqwest = "0.11.6"
scraper = "0.12.0"
tempfile = "*"
xdg = "2.4.0"
zip = "0.5.13"

[dependencies.tokio]
features = ["full"]
version = "1"